<resources>
    <string name="app_name">数字钥匙</string>

    <string name="left_front_door">左前门</string>
    <string name="right_front_door">右前门</string>
    <string name="left_back_door">左后门</string>
    <string name="right_back_door">右后门</string>

    <string name="left_front_window">左前窗</string>
    <string name="right_front_window">右前窗</string>
    <string name="left_back_window">左后窗</string>
    <string name="right_back_window">右后窗</string>

    <string name="car_hood">引擎盖</string>
    <string name="car_trunk">后备箱</string>
    <string name="car_horn">喇叭</string>
    <string name="car_light">大灯</string>

    <string name="query_bl">获取蓝牙</string>
    <string name="bl_querying">获取蓝牙</string>
    <string name="bl_off">蓝牙未开启</string>
    <string name="bl_on">蓝牙已开启</string>

    <string name="bl_scan">扫描蓝牙</string>
    <string name="bl_scanning">蓝牙扫描中</string>
    <string name="bl_scanning_stop">蓝牙扫描中断</string>
    <string name="bl_scan_stop">未扫描蓝牙</string>

    <string name="bl_connect_no">未连接蓝牙</string>
    <string name="bl_connect_success">蓝牙连接成功</string>
    <string name="bl_connectting">蓝牙连接中...</string>
    <string name="bl_connect_failed">蓝牙连接失败</string>
    <string name="bl_disconnect">蓝牙连接中断</string>

    <string name="bl_null">蓝牙服务启动失败，请退出后重新进入</string>

    <string name="bl_devices">设备：</string>
    <string name="bl_name">名称：</string>
    <string name="bl_rssi">强度：</string>
    <string name="bl_not_connect">未连接</string>
    <string name="bl_linking">正在连接</string>
    <string name="bl_connected">已经连接</string>

    <string name="rssi">rssi:</string>
    <string name="ave_rssi">ave rssi:</string>
    <string name="use_rssi">使用rssi</string>
    <string name="use_ave_rssi">使用平均值rssi</string>
    <string name="error_pe_more_than_pb">PE不能大于PB</string>
    <string name="error_pe_null">PE不能为空</string>
    <string name="error_pb_null">PB不能为空</string>
</resources>
