<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/device"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bl_devices"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bl_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/rssi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bl_not_connect"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/isconnect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bl_not_connect"
        android:textSize="20sp" />
</LinearLayout>