<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/query_bl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_bottom_btn_selector"
            android:text="@string/query_bl" />

        <TextView
            android:id="@+id/query_bl_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/query_bl"
            android:layout_alignBottom="@id/query_bl"
            android:text="@string/bl_off"/>

        <Button
            android:id="@+id/scan_ble"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bg_bottom_btn_selector"
            android:layout_below="@id/query_bl"
            android:text="@string/bl_scan" />

        <TextView
            android:id="@+id/scan_ble_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/scan_ble"
            android:layout_alignBottom="@id/scan_ble"
            android:text="@string/bl_scan_stop" />
    </RelativeLayout>

    <ListView
        android:id="@+id/ble_list_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"></ListView>
</LinearLayout>
